Ajouter un breadcrumb pour faciliter la navigation

--- a/app/views/hives/bas_st_laurent.haml
+++ b/app/views/hives/bas_st_laurent.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Bas-St-Laurent"
 .row
   .col-md-6
     =image_tag "regions/bas_st_laurent.jpg", class: "img-responsive thumbnail"
