--- a/app/views/hives/capitale_nationale.haml
+++ b/app/views/hives/capitale_nationale.haml
@@ -1,6 +1,6 @@
 -content_for :page_title do
   Votre assemblée régionale
-
+-breadcrumb :hive, "Capitale nationale"
 .row
   .col-md-6
     =image_tag "regions/capitale_nationale.jpg", class: "img-responsive thumbnail"
