--- a/app/views/hives/centre_du_quebec.haml
+++ b/app/views/hives/centre_du_quebec.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Centre-du-Québec"
 .row
   .col-md-6
     =image_tag "regions/centre_du_quebec.jpg", class: "img-responsive thumbnail"
