--- a/app/views/hives/chaudiere_appalaches.haml
+++ b/app/views/hives/chaudiere_appalaches.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Chaudière-Appalaches"
 .row
   .col-md-6
     =image_tag "regions/chaudiere_appalaches.jpg", class: "img-responsive thumbnail"
