--- a/app/views/hives/estrie.haml
+++ b/app/views/hives/estrie.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Estrie"
 .row
   .col-md-6
     =image_tag "regions/estrie.jpg", class: "img-responsive thumbnail"
