--- a/app/views/hives/gaspesie.haml
+++ b/app/views/hives/gaspesie.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Gaspésie/Îles-de-la-Madeleine"
 .row
   .col-md-6
     =image_tag "regions/gaspesie.jpg", class: "img-responsive thumbnail"
