--- a/app/views/hives/laval.haml
+++ b/app/views/hives/laval.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Laval"
 .row
   .col-md-6
     =image_tag "regions/laval.jpg", class: "img-responsive thumbnail"
