--- a/app/views/hives/mauricie.haml
+++ b/app/views/hives/mauricie.haml
@@ -1,7 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
-
+-breadcrumb :hive, "Mauricie"
 .row
   .col-xs-6
     =image_tag "regions/mauricie.jpg", class: "img-responsive thumbnail"
