--- a/app/views/hives/abitibi.haml
+++ b/app/views/hives/abitibi.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Abitibi-Temiscamingue"
 .row
   .col-md-6
     =image_tag "regions/abitibi.jpg", class: "img-responsive thumbnail"
