--- a/app/views/hives/cote_nord.haml
+++ b/app/views/hives/cote_nord.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Côte-Nord"
 .row
   .col-md-6
     =image_tag "regions/cote_nord.jpg", class: "img-responsive thumbnail"
