--- a/app/views/hives/lanaudiere.haml
+++ b/app/views/hives/lanaudiere.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Lanaudière"
 .row
   .col-md-6
     =image_tag "regions/lanaudiere.jpg", class: "img-responsive thumbnail"
