--- a/app/views/hives/monteregie.haml
+++ b/app/views/hives/monteregie.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Montérégie"
 .row
   .col-md-6
     =image_tag "regions/monteregie.jpg", class: "img-responsive thumbnail"
