--- a/app/views/hives/montreal.haml
+++ b/app/views/hives/montreal.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Montréal"
 .row
   .col-md-6
     =image_tag "regions/montreal.jpg", class: "img-responsive thumbnail"
