--- a/app/views/hives/nord_du_quebec.haml
+++ b/app/views/hives/nord_du_quebec.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Nord-du-Québec"
 .row
   .col-md-6
     =image_tag "regions/nord_du_quebec.jpg", class: "img-responsive thumbnail"
