--- a/app/views/hives/outaouais.haml
+++ b/app/views/hives/outaouais.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Outaouais"
 .row
   .col-md-6
     =image_tag "regions/outaouais.jpg", class: "img-responsive thumbnail"
