--- a/app/views/hives/saguenay.haml
+++ b/app/views/hives/saguenay.haml
@@ -1,6 +1,7 @@
 -content_for :page_title do
   Votre assemblée régionale
 
+-breadcrumb :hive, "Saguenay"
 .row
   .col-md-6
     =image_tag "regions/saguenay.jpg", class: "img-responsive thumbnail"
