--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -7,7 +7,7 @@
     %h3 Notre vision
     %ol
       %li
-        En démocratie véritable, <strong>c'est le peuple qui est souverain</strong>. C'est au peuple à dicter les règles du jeu, pas à l'État, ni aux politiciens, ni aux partis politiques, ni aux multinationales, ni aux banquiers, ni à quel qu’oligarchie que ce soit.
+        En démocratie véritable, <strong>c'est le peuple qui est souverain</strong>. C'est au peuple à dicter les règles du jeu, pas à l'État, ni aux politiciens, ni aux partis politiques, ni aux multinationales, ni aux banquiers, ni à quelque oligarchie que ce soit.
       %li
         Présentement, <strong>la souveraineté du peuple est bafouée</strong> de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, écoutent davantage les puissants que les simples citoyens.
       %li
