--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -7,7 +7,7 @@
       %small (Événement Facebook à venir).
 
 %h2
-  En démocratie véritable, c'est le peuple qui est souverain. C'est au peuple à dicter les règles du jeu, pas à l'État, ni aux politiciens, ni aux partis politiques, ni aux multinationales, ni aux banquiers, ni à quel qu’oligarchie que ce soit.    
+  En démocratie véritable, c'est le peuple qui est souverain. C'est au peuple à dicter les règles du jeu, pas à l'État, ni aux politiciens, ni aux partis politiques, ni aux multinationales, ni aux banquiers, ni à quelque oligarchie que ce soit.    
 
 
 %p
