evenement facebook pour la table nationale

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,9 +2,8 @@
   .col-xs-12
     %br/
     .alert.alert-info.lead
-      =fa_icon("star")
-      La toute première table nationale de l'ACCQ se tiendra le 12-13 septembre prochain à Drummondville! 
-      %small (Événement Facebook à venir).
+      =fa_icon("facebook")
+      =link_to "La toute première table nationale de l'ACCQ se tiendra le 12-13 septembre prochain à Drummondville!", "https://www.facebook.com/events/694247704009973/", target: "_blank"
 
 %h2
   En démocratie véritable, c'est le peuple qui est souverain. C'est au peuple à dicter les règles du jeu, pas à l'État, ni aux politiciens, ni aux partis politiques, ni aux multinationales, ni aux banquiers, ni à quelque oligarchie que ce soit.    
