--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -37,7 +37,7 @@
 
         -if (index+1) % 2 == 0
           .clearfix.visible-xs.visible-sm
-        -elsif (index+1) % 3 == 0
+        -if (index+1) % 3 == 0
           .clearfix.visible-md.visible-lg          
 :javascript
   $( document ).ready(function() {      
