--- a/app/views/home/mission.haml
+++ b/app/views/home/mission.haml
@@ -5,7 +5,8 @@
 
 .row
   .col-md-12
-    %p.lead Ce regroupement de Québécois et de Québécoises est né d'un double constat:
+    =render "mission_nav", active: :mission
+    %h2.sub-section Ce regroupement de Québécois et de Québécoises est né d'un double constat:
     %ol
       %li Les principes de notre gouvernance représentative permettent le contrôle des partis politiques et des puissances économiques qui détournent le pouvoir à leur profit, à tel point que la population n'a pratiquement aucune prise sur les décisions qui la concernent. Cet état de fait met en péril notre avenir et l'avenir du monde.
       %li La seule façon de surmonter notre impuissance est de nous rassembler et d'instituer un pouvoir populaire. Une Assemblée constituante citoyenne indépendante et NON PARTISANE est un moyen pacifique d’y arriver.
@@ -13,89 +14,3 @@
     %p Considérant que la population québécoise ne s’est jamais prononcée sur sa Loi fondamentale, NOUS, le peuple, sommes en droit de définir la façon dont nous voulons nous gouverner et de dicter les lignes directrices que doit suivre l’État. 
 
     %p L'Assemblée constituante citoyenne du Québec (ACCQ) se donne comme mission de préparer, de promouvoir et de provoquer la convocation d’une Assemblée constituante indépendante de l’État québécois et de rédiger une constitution provisoire. 
-
-
-    %h2.sub-section Notre vision
-    %h3 La démocratie, d'abord et avant tout
-
-    %p Les hommes et les femmes qui s’engagent avec nous s’entendent pour mettre en tête de liste de leurs actions politiques, l'instauration d'une véritable démocratie au Québec par une démarche constituante citoyenne non partisane pour que le peuple reprenne les guides de son avenir collectif.
-
-    %p Nous, Constituants et Constituantes, invitons tous ceux et celles qui ont une cause à cœur (environnement, éducation et instruction, langue, santé, répartition de la richesse, bien commun, droits des minorités, droits des enfants, droits des travailleurs, répartition des pouvoirs, développement régional, mode de scrutin, système politique, etc.) à nous rejoindre. 
-
-    %p Pour nous, l’autorité ultime en démocratie, c’est NOUS, le peuple.
-
-
-    %h2.sub-section Notre moyen
-
-    %h3 Assemblée constituante citoyenne du Québec
-
-    %p 
-      Notre regroupement d’hommes et de femmes engagés sur la voie d’une véritable démocratie a pour but d’initier la convocation d'une Assemblée constituante indépendante de l’État. Nous sommes déterminés à tout mettre en œuvre pour que la toute première constitution démocratique du Québec soit rédigée par et pour le peuple. Pour démontrer l’efficacité de notre mode de fonctionnement, nous nous engageons ensemble à la rédaction d’une première Constitution préparatoire.
-    %p.lead
-      Nous, Constituants, Constituantes, nous nous engageons à :
-
-    %ul
-
-      %li Promouvoir l’importance d’une démarche constituante citoyenne afin que notre constitution soit rédigée par et pour le peuple.
-      %li Établir une structure organisée, décentralisée et démocratique avec l'objectif de mettre en place une Assemblée constituante citoyenne non partisane, entièrement libre de ses délibérations.
-      %li Regrouper les Québécoises et les Québécois pour qu’ils exercent leur pouvoir constituant en les invitant d’abord à en définir le mode de fonctionnement.
-      %li Instruire les Constituants et les Constituantes en leur offrant des outils d’éducation populaire par notre site WEB, nos séminaires WEB et nos assemblées informatives.  Ces ateliers constituants porteront sur les divers chapitres d'une constitution : choix de société, statut des minorités, langue officielle, laïcité, droits, libertés et responsabilités, services publics, ressources naturelles et environnement, sécurité, politiques économiques, fiscales et monétaires, type de gouvernement, mécanismes de participation des citoyens et des régions, gouvernements territoriaux, etc.
-      %li Inviter tous les Québécois et toutes les Québécoises à participer à l'écriture d'une constitution provisoire.
-      %li Poursuivre les pressions nécessaires sur ceux et celles qui souhaitent nous représenter pour qu'ils ou qu’elles s'engagent, au-delà de toute ligne de parti, à convoquer, sans délai, une Assemblée constituante non partisane et indépendante de l’État, à la suite du prochain rendez-vous électoral québécois.  Cette Assemblée sera mandatée pour rédiger et faire adopter notre toute première constitution démocratique du Québec. 
-
- 
-    %p.lead 
-      Un État constitué par et pour le peuple devient un outil favorisant l’épanouissement individuel et collectif
-
-
-    %h2.sub-section Nos objectifs
-
-    %p.lead LE PREMIER OBJECTIF de l'Assemblée constituante citoyenne du Québec vise à mobiliser un minimum de 100 000 personnes comprenant bien le sens d'une démarche constituante non partisane. 
-
-    %p <strong>NOUS,</strong> Constituants, Constituantes, exercerons les pressions nécessaires auprès de toutes les personnes concernées d’ici le prochain rendez-vous électoral québécois afin que les candidat(e)s s'engagent solennellement, au-delà de toute ligne de parti,  à convoquer, sans délai, une Assemblée constituante indépendante de l'État et à lui fournir les moyens requis pour un fonctionnement efficace. 
-
-    %h3 Comment le réaliserons-nous ?
-
-    %p <strong>Ensemble,</strong> nous ferons connaître le projet politique d'une Assemblée constituante non partisane, «idéalement convoquée par l'Assemblée nationale», qui permettra à toute la population de redéfinir elle-même ses institutions démocratiques, ses règles du pouvoir et les grandes lignes d'un nouveau projet de société plus conforme à ses aspirations.                                           
-
-    %p <strong>Ensemble,</strong> nous démontrerons l'utilité et la faisabilité de notre démarche.
-
-    %p <strong>Ensemble,</strong> nous créerons une association de Constituants et de Constituantes prêts à s'engager et à faire les pressions nécessaires sur tous les candidat(e)s lors des prochaines élections québécoises.
-
-
-    %p.lead 
-      NOTRE DEUXIÈME OBJECTIF est de convoquer une Assemblée constituante citoyenne dès qu’il nous sera possible de le faire. 
-    
-    %p Tous les débats de l’ACCQ seront accessibles par web diffusion. 
-
-    %p Une fois notre structure organisationnelle bien établie, nous définirons ENSEMBLE, démocratiquement, le mode de fonctionnement (lignes de conduite, critères d’éligibilité, statuts et règlements, etc.) de l’Assemblée constituante citoyenne du Québec.
-
-
-    %h3 Comment le réaliserons-nous ?
- 
-    %p <strong>Ensemble,</strong> nous établirons une structure organisationnelle décentralisée pour faciliter l’accessibilité des Constituants et des Constituantes afin de leur permettre de participer à toutes les décisions. Des outils modernes de démocratie directe seront aussi utilisés.   
-
-    %p <strong>Ensemble,</strong> nous établirons un noyau central, composé de différents comités et d’un comité organisateur (COOR) au niveau national, qui permettra l'harmonisation de notre démarche.   
-
-    %p <strong>Ensemble,</strong> nous  organiserons des ateliers constituants aux niveaux national, régional et local à l'aide d'outils d'éducation permettant à tous de se familiariser avec notre démarche constituante et avec son mode de fonctionnement démocratiquement défini.                 
-
-    %p <strong>Ensemble,</strong> nous définirons les détails de ce mode de fonctionnement (format, critères d'éligibilité, lignes de conduite, statuts et règlements, tirage au sort, etc.).                                                                                            
-
-    %p <strong>Ensemble,</strong> nous participerons à la rédaction d’une toute première constitution provisoire vraiment démocratique.
-
-    %p En fonction du mode de fonctionnement défini, une fois que les hommes et les femmes qui y siègeront auront été choisis, nous participerons ensemble à cet exercice fort révélateur de ce que devrait être notre première Loi fondamentale québécoise. Tous les membres constituants rassemblés à ce moment-là avec nous, pourront participer activement à son élaboration. Imaginez la fierté que nous en retirerons… 
-
-
-    %h2.sub-section Joignez-vous à nous !
-
-
-    %p Plus nous serons nombreux à endosser les pouvoirs constituants que nous sommes en droit de nous accorder, moins la légitimité de notre démarche sera contestable.                                                                              
-    %p Plus nous serons nombreux à élaborer notre constitution provisoire et plus elle sera représentative de la volonté populaire du Québec. 
-
-    %p Une fois rédigée, cette constitution «préparatoire» sera alors l’assise d’une nouvelle démarche légitimée par l’Assemblée nationale visant à mobiliser toute la population du Québec.
-
-    %p Si vous êtes de ceux et celles qui veulent revoir avec nous la façon dont nous sommes gouvernés et qui aimeraient participer à la création d’un projet de société plus conforme à leurs aspirations, n'hésitez pas à vous joindre à nous <strong>maintenant</strong>. 
-
-    %p Vous trouverez, dans votre regroupement régional, le réseau et les moyens nécessaires pour favoriser l'instauration d'une véritable démocratie. 
-
-    %p.lead Rejoignez votre Assemblée constituante régionale québécoise (ACRQ). 
