--- a/app/views/admin/home/show.haml
+++ b/app/views/admin/home/show.haml
@@ -1,3 +1,9 @@
 -content_for :page_title do
   =fa_icon "lock"
   Gestion du site de l'ACCQ
+
+%ul
+  %li= link_to "Gérer les ACRQ", admin_hives_path
+  %li= link_to "Gérer les signatures du manifeste", admin_members_path
+  %li= link_to "Voir le site dans un nouvel onglet", root_path, target: "_blank"
+  %li= link_to("Se déconnecter", destroy_user_session_path, :method => :delete, id: "sign-out") 
