Petite correction au point #1 du manifeste

--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -7,7 +7,7 @@
     %h3 Le manifeste
     %ol
       %li
-        Dans une démocratie digne de ce nom, c'est le peuple qui est l'autorité ultime. C'est à lui de décider de la manière qu'il veut se gouverner. Ensemble, nous nous engageons à redéfinir le mode de fonctionnement de l'État.
+        Dans une démocratie digne de ce nom, c'est le peuple qui est l'autorité ultime. C'est à lui de décider de la manière dont il veut se gouverner. Ensemble, nous nous engageons à redéfinir le mode de fonctionnement de l'État.
       %li
         Présentement, <strong>nos droits individuels et collectifs sont bafoués</strong> de toutes parts. Ceux que nous choisissons pour nous représenter, une fois élus, écoutent davantage les puissants que les simples citoyens.
       %li
