--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,7 +1,7 @@
 %h2 Article #1 de notre manifeste
 .well
   %p.lead
-    Dans une démocratie digne de ce nom, c'est le peuple qui est l'autorité ultime. C'est à lui de décider de la manière qu'il veut se gouverner. Ensemble, nous nous engageons à redéfinir le mode de fonctionnement de l'État.
+    Dans une démocratie digne de ce nom, c'est le peuple qui est l'autorité ultime. C'est à lui de décider de la manière dont il veut se gouverner. Ensemble, nous nous engageons à redéfinir le mode de fonctionnement de l'État.
 
   %p
     Êtes-vous d'accord avec cet énoncé? #{link_to "Inscrivez-vous et <b>signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger", id: "#sign-manifest"}
