--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -83,8 +83,8 @@
     %footer
       .container        
         %p.text-muted
+          =image_tag("logo_trans.png", height: 30)
           Assemblée constituante citoyenne du Québec (ACCQ) @#{Date.today.year}
-          -if false
-            \-          
-            %i.fa.fa-bitbucket-square
-            Code source sur #{link_to "bitbucket", "https://www.bitbucket.org/flamontagne/accq", target: "_blank"}          
+          \-          
+          %i.fa.fa-bitbucket-square
+          Code source sur #{link_to "bitbucket", "https://www.bitbucket.org/flamontagne/accq", target: "_blank"}     
