ajouter les noms des comités dans le noyau central

--- a/app/views/home/noyau_central.haml
+++ b/app/views/home/noyau_central.haml
@@ -8,6 +8,11 @@
     =image_tag "noyau_central.jpg", class: "thumbnail img-responsive"
   .col-sm-4
     %h3.sub-section.no-margin Comités
-    %ul
-      %li A: Comité XYZ
-      %li B: Comité XYA
+    %ol{type: "A"}
+      %li= link_to "Comité mobilisation et recrutement", ""
+      %li= link_to "Comité financement et trésorerie", ""
+      %li= link_to "Comité communication", ""
+      %li= link_to "Comité éducation populaire", ""
+      %li= link_to "Comité événement", ""
+      %li= link_to "Comité web", ""
+      %li= link_to "Comité secrétariat et registraire", ""
