augmenter la valeur de la variable SASS grid-float-breakpoint afin que le menu ne soit pas déphasé pour les petits desktop

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import "font-awesome";
 
 //override theme variables
+$grid-float-breakpoint: 992px;
 $black: #333;
 $red: #69140F;
 $red2: #B31E18;
