--- a/app/views/home/noyau_central.haml
+++ b/app/views/home/noyau_central.haml
@@ -13,6 +13,6 @@
       %li= link_to "Comité financement et trésorerie", ""
       %li= link_to "Comité communication", ""
       %li= link_to "Comité éducation populaire", ""
-      %li= link_to "Comité événement", ""
       %li= link_to "Comité web", ""
       %li= link_to "Comité secrétariat et registraire", ""
+      %li= link_to "Comité événements", ""
