--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,7 +10,7 @@
 
 .row.regions
   .col-md-6
-    %h3.sub-section Première table nationale
+    %h3.sub-section Première rencontre nationale
     %ul
       %li= link_to "Photos", ""
       %li= link_to "Vidéos", ""
