--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -7,27 +7,25 @@
     %h3 Le manifeste
     %ol
       %li
-        Dans une démocratie digne de ce nom, c'est le peuple qui est l'autorité ultime. C'est à lui de décider de la manière dont il veut se gouverner. Ensemble, nous nous engageons à redéfinir le mode de fonctionnement de l'État.
+        En démocratie véritable, c’est le peuple qui est souverain. C’est au peuple à dicter les règles du jeu.
       %li
-        Présentement, <strong>nos droits individuels et collectifs sont bafoués</strong> de toutes parts. Ceux que nous choisissons pour nous représenter, une fois élus, écoutent davantage les puissants que les simples citoyens.
+        Présentement, la souveraineté du peuple est bafouée de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, servent davantage le 1% que le 99%, les simples citoyens.      
       %li
-        Pour sortir de notre impuissance, il ne suffit pas de manifester ni de changer de parti au pouvoir. <strong>Il faut changer le régime démocratique lui-même</strong> et revoir la répartition des pouvoirs.
+        Pour sortir de cette impuissance, il ne suffit pas de manifester ni de changer de parti au pouvoir. Il faut changer le régime politique lui-même et les règles du jeu qui sont à la source de notre impuissance.      
       %li
-        Le moyen de changer de régime politique, c'est d'<strong>écrire ou de réviser la constitution de l'État</strong>. Cette Loi fondamentale est ce qui nous constitue et nous définit en tant que peuple distinct et nous protège des abus de pouvoir. Nul ne peut la contourner sans d'abord avoir consulter le peuple.
+        Le moyen de changer de régime politique, c’est d’écrire la constitution de l’État. Une constitution est ce qui nous définit comme peuple distinct et nous protège des abus de pouvoirs. C’est la loi fondamentale que tous les dirigeants, organismes et citoyens doivent respecter.
       %li
-        <strong>Le peuple québécois n'a jamais été consulté</strong> sur ce qui nous sert de constitution, aussi bien au Québec qu'au Canada.
+        Le peuple québécois ne s’est jamais prononcé sur ce qui lui sert de constitution, aussi bien au Québec qu’au Canada.
       %li
-        Pour écrire ou réécrire notre constitution, il faut avoir <strong>recours au peuple souverain</strong>, car les politiciens sont sur ce sujet, en conflit d’intérêt.
+        Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques  sont sur ce sujet, en conflits d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir. 
       %li
-        L'assemblée par laquelle le peuple peut exercer son pouvoir de façon légitime, ordonnée et efficace est ce qu'on appelle une <strong>Assemblée constituante</strong>. Son rôle est d'inviter la population à participer et à proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, libre de toute pression indue, donc, composée <em>idéalement</em> de citoyens <strong>tirés au sort</strong>. Le débat entourant son travail doit être équitablement encadré. Elle doit pouvoir avoir recours à toutes les ressources nécessaires pour faire son travail.
+        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est de consulter la population et de proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre de toute pression indue, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à éviter autant que possible, le contrôle de l’information par des intérêts particuliers.         
       %li
-        L'Assemblée constituante doit <em>idéalement</em> être <strong>convoquée par l'Assemblée nationale</strong> pour s'assurer que la constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec comme au Canada.
+        L’Assemblée constituante doit être convoquée par l’Assemblée nationale pour s 'assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec comme au Canada.         
       
       %li
-        Nous, constituants et constituantes, nous nous engageons à exercer les pressions nécessaires pour que soit convoquée rapidement dans les mois suivants le prochain rendez-vous électoral au Québec, une Assemblée constituante non partisane et indépendante de l'État.
+        Nous, citoyens constituants, nous engageons à mettre tout en œuvre avec tous les moyens nécessaires, afin d’obtenir de l’Assemblée nationale, le respect de la volonté du peuple       
 
-      %li
-        Nous, constituants et constituantes, participerons à définir ensemble le mode de fonctionnement d'une telle démarche et nous nous engagerons à jeter les bases d'une constitution préparatoire.
   .col-md-4
     %h3 Dernières signatures
     %ul.list-unstyled#last-signatures
