--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -51,10 +51,18 @@
                 %span.caret
           
               %ul.dropdown-menu
-                %li= link_to "<i class='fa fa-book'></i> Bibliothèque".html_safe, bibliotheque_path
-                %li= link_to "<i class='fa fa-video-camera'></i> Médiathèque".html_safe, mediatheque_path
+                %li= link_to "Bibliothèque".html_safe, bibliotheque_path
+                %li= link_to "Médiathèque".html_safe, mediatheque_path
 
-            %li= link_to "Médias", ""
+            %li.dropdown
+              %a{href: "#", class: "dropdown-toggle", "data-toggle" => "dropdown", role: "button", "aria-haspopup" => "true", "aria-expanded" => "false"}
+                Médias
+                %span.caret
+          
+              %ul.dropdown-menu
+                %li= link_to "Couverture médiatique", media_coverage_path
+                %li= link_to "Communiqués de presse", press_releases_path
+
             %li= link_to "Outils de promotion", ""
             %li= link_to "Nous joindre", ""
     
