Changer la phrase qui mène au manifeste sur la page d'accueil

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,10 +1,9 @@
-%h2 Article #1 de notre manifeste
 .well
-  %p.lead
-    En démocratie véritable, c’est le peuple qui est souverain. C’est au peuple à dicter les règles du jeu.
+  %h2.no-margin
+    Nous, CITOYENS CONSTITUANTS, nous nous engageons à promouvoir, exiger et préparer la convocation d'une Assemblée constituante non partisane, et à tout mettre en oeuvre pour obtenir le respect de la volonté du peuple.
 
   %p
-    Êtes-vous d'accord avec cet énoncé? #{link_to "Inscrivez-vous et <b>signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger", id: "#sign-manifest"}
+    Nous vous invitons à vous engager avec nous. #{link_to "<b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
 
 
 
