Ajouter vidéo de Roméo Bouchard sur la page d'accueil

--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,10 +10,16 @@
 .row.regions
   .col-md-6
     %h3.sub-section Première rencontre nationale
-    %ul
-      %li= link_to "Photos", ""
-      %li= link_to "Vidéos", ""
-      %li= link_to "Communiqué de presse", ""
+    %p Roméo Bouchard prend la parole lors de la première rencontre de l'ACCQ
+    .youtube-container
+      .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
+
+    %p.small * D'autres photos et vidéos sont à venir.
+    -if false
+      %ul
+        %li= link_to "Photos", ""
+        %li= link_to "Vidéos", ""
+        %li= link_to "Communiqué de presse", ""
 
 
     %h3.sub-section Aimez notre page Facebook
@@ -53,3 +59,25 @@
           }
       ); 
   });
+
+  (function() {
+      var v = document.getElementsByClassName("youtube-player");
+      for (var n = 0; n < v.length; n++) {          
+          var p = document.createElement("div");
+          p.innerHTML = labnolThumb(v[n].dataset.id);
+          p.onclick = labnolIframe;
+          v[n].appendChild(p);
+      }
+  })();
+   
+  function labnolThumb(id) {
+      return '<img class="youtube-thumb" src="//i.ytimg.com/vi/' + id + '/hqdefault.jpg"><div class="play-button"></div>';
+  }
+   
+  function labnolIframe() {
+      var iframe = document.createElement("iframe");
+      iframe.setAttribute("src", "//www.youtube.com/embed/" + this.parentNode.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&controls=0&showinfo=0");
+      iframe.setAttribute("frameborder", "0");
+      iframe.setAttribute("id", "youtube-iframe");
+      this.parentNode.replaceChild(iframe, this);
+  }  
