--- a/app/views/home/manifest.haml
+++ b/app/views/home/manifest.haml
@@ -7,24 +7,24 @@
     %h3 Le manifeste
     %ol
       %li
-        En démocratie véritable, c’est le peuple qui est souverain. C’est au peuple à dicter les règles du jeu.
+        EDans une démocratie digne de ce nom, le peuple est souverain. C’est donc à lui de dicter les règles du jeu.
       %li
-        Présentement, la souveraineté du peuple est bafouée de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, servent davantage le 1% que le 99%, les simples citoyens.      
+        Présentement, la souveraineté du peuple est bafouée de toutes parts. Ceux que nous avons choisis pour nous représenter, une fois élus, servent davantage l’oligarchie économique que la population en général.      
       %li
-        Pour sortir de cette impuissance, il ne suffit pas de manifester ni de changer de parti au pouvoir. Il faut changer le régime politique lui-même et les règles du jeu qui sont à la source de notre impuissance.      
+        Pour sortir de cette impuissance politique, il ne suffit pas de manifester ni de changer de parti au pouvoir. Il faut changer le régime politique lui-même et les règles du jeu qui sont à la source de notre impuissance.
       %li
-        Le moyen de changer de régime politique, c’est d’écrire la constitution de l’État. Une constitution est ce qui nous définit comme peuple distinct et nous protège des abus de pouvoirs. C’est la loi fondamentale que tous les dirigeants, organismes et citoyens doivent respecter.
+        Le moyen de changer de régime politique, c’est d’écrire la constitution de l’État. Une constitution est ce qui nous définit comme peuple distinct et nous protège des abus de pouvoir. C’est la loi fondamentale que tous les dirigeants, organismes et citoyens doivent respecter.
       %li
         Le peuple québécois ne s’est jamais prononcé sur ce qui lui sert de constitution, aussi bien au Québec qu’au Canada.
       %li
-        Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques  sont sur ce sujet, en conflits d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir. 
+        Pour écrire notre constitution, il faut avoir recours au peuple souverain, car les partis politiques sont sur ce sujet en conflit d’intérêts. Ce n’est pas aux gens au pouvoir d’écrire les règles du pouvoir.
       %li
-        L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est de consulter la population et de proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre de toute pression indue, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à éviter autant que possible, le contrôle de l’information par des intérêts particuliers.         
+         L’assemblée par laquelle le peuple peut exercer sa souveraineté et son pouvoir constituant de façon légitime, ordonnée et efficace est ce qu’on appelle une Assemblée constituante. Son rôle est de consulter la population et de proposer, en toute liberté, un texte de constitution pour adoption par référendum. Elle doit être représentative, non partisane et libre de toute pression indue, donc composée idéalement de citoyens tirés au sort. Elle doit pouvoir recourir à toutes les ressources et expertises nécessaires pour faire son travail. Le débat public entourant son travail doit être encadré de façon à éviter autant que possible le contrôle de l’information par des intérêts particuliers.   
       %li
-        L’Assemblée constituante doit être convoquée par l’Assemblée nationale pour s 'assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec comme au Canada.         
+        L’Assemblée constituante doit idéalement être convoquée par l’Assemblée nationale pour s’assurer que la Constitution qui en résultera, une fois adoptée par référendum, ne puisse être écartée par les pouvoirs en place, au Québec, au Canada et à l’international.
       
       %li
-        Nous, citoyens constituants, nous engageons à mettre tout en œuvre avec tous les moyens nécessaires, afin d’obtenir de l’Assemblée nationale, le respect de la volonté du peuple       
+        Nous, citoyens constituants, nous nous engageons à mettre tout en œuvre, afin d’obtenir de l’Assemblée nationale le respect de la volonté du peuple.
 
   .col-md-4
     %h3 Dernières signatures
