--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -115,6 +115,9 @@ no-margin {
   margin-bottom:0;
 }
 
+img.preview-image {
+  margin-right: 20px
+}
 
 /* On demand youtube containers */
 .youtube-container { display: block; margin: 20px auto; width: 100%; max-width: 600px; }
